# stream-manipulation-platform

./: CMakeLists.txt  LICENSE  test.c
includes/: buffermanager.h  class.h  debug.h  eventmanager.h  heap.h  http_parser.h  list.h  plugin.h  pluginloader.h  sockets.h  stringio.h  tree.h  util.h
src/: CMakeLists.txt  buffermanager.c  class.c  eventmanager.c  heap.c  http_parser.c  pluginloader.c  sockets.c  stringio.c  util.c
